--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,13 @@
   background-color: #0056b3;
   border-color: #0056b3;
 }
+
+.background {
+  background-image: url('https://media.istockphoto.com/id/1394594963/pt/foto/calendar-with-pen-on-the-blue-empty-copy-space-for-text-concept-for-busy-timeline-organize.jpg?s=612x612&w=0&k=20&c=Pf-j6woka8PyyHsUu1oKOOhFSwNq0P2p5qe5SfXs8Dg=');
+  background-size: cover; /* para cobrir todo o espaço disponível */
+  background-position: center; /* para centralizar a imagem */
+}
+
+.custom-border {
+  border: 2px solid #007bff; /* Azul-esverdeado */
+}
